Prevent topic content metadata from wrapping
This is always weird when it wraps (especially on mobile, where it's
fairly common). You end up with weird cases like having "(500" after the
title and "words) on the next line.

--- a/tildes/scss/modules/_topic.scss
+++ b/tildes/scss/modules/_topic.scss
@@ -78,6 +78,10 @@
   align-items: center;
 }
 
+.topic-content-metadata {
+  white-space: nowrap;
+}
+
 .topic-group {
   margin-right: 0.4rem;
 }
